// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled SmallTitle Should render with level one 1`] = `
.c0 {
  text-transform: uppercase;
  line-height: 1.1;
  color: inherit;
  font-size: 19px;
  font-weight: 500;
  padding: 40px 0;
  margin: 0;
}

<h3
  className="c0"
/>
`;

exports[`Styled SmallTitle Should render with level two 1`] = `
.c0 {
  text-transform: uppercase;
  line-height: 1.1;
  color: inherit;
  font-size: 16px;
  font-weight: 400;
  padding: 30px 0;
  margin: 0;
}

<h3
  className="c0"
/>
`;

exports[`Styled SmallWrapper Should render with level one 1`] = `
.c0 {
  padding: 0 20px 10px 20px;
  border-bottom: none;
}

<div
  className="c0"
/>
`;

exports[`Styled SmallWrapper Should render with level two 1`] = `
.c0 {
  padding: 0;
  border-bottom: none;
}

<div
  className="c0"
/>
`;

exports[`Styled Title Should render with level one 1`] = `
.c0 {
  text-transform: uppercase;
  line-height: 1.1;
  color: inherit;
  font-size: 21px;
  font-weight: 500;
  padding: 50px 0;
  margin: 0;
}

<h3
  className="c0"
/>
`;

exports[`Styled Title Should render with level two 1`] = `
.c0 {
  text-transform: uppercase;
  line-height: 1.1;
  color: inherit;
  font-size: 16px;
  font-weight: 400;
  padding: 40px 0;
  margin: 0;
}

<h3
  className="c0"
/>
`;

exports[`Styled Wrapper Should render with level one 1`] = `
.c0 {
  padding: 0 50px 40px 50px;
  border-bottom: none;
}

<div
  className="c0"
/>
`;

exports[`Styled Wrapper Should render with level two 1`] = `
.c0 {
  padding: 0;
  border-bottom: none;
}

<div
  className="c0"
/>
`;
